force-app/main/default/objects/Historical_Data_Opportunity__c/Historical_Data_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Historical Data Opportunity</label>
    <nameField>
        <displayFormat>HDO-{000000000}</displayFormat>
        <label>Historical Data Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Data Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>