force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>