force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Historical Data Opportunities</relationshipLabel>
    <relationshipName>Historical_Data_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>