force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <label>Account Owner</label>
    <length>90</length>
    <type>Text</type>
</CustomField>