force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Account_Region_Area__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Area__c</fullName>
    <label>Account: Region/Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>