force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Exact_Online_Id__c.field-meta.xml
<CustomField>
    <fullName>Exact_Online_Id__c</fullName>
    <label>Exact Online Id</label>
    <length>90</length>
    <type>Text</type>
</CustomField>