force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Expected_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Order_Date__c</fullName>
    <label>Expected Order Date</label>
    <type>Date</type>
</CustomField>