force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Field_Filter_Day__c.field-meta.xml
<CustomField>
    <fullName>Field_Filter_Day__c</fullName>
    <formula>CASE(
  MOD( Snapshot_Created_Date__c  - DATE( 1900, 1, 8 ), 7 ),
  0, &quot;1&quot;,
  1, &quot;2&quot;,
  2, &quot;3&quot;,
  3, &quot;4&quot;,
  4, &quot;5&quot;,
  5, &quot;6&quot;, 
  &quot;7&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Filter: Day</label>
    <type>Text</type>
</CustomField>