force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Field_Filter_Name_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Field_Filter_Name_of_Day__c</fullName>
    <formula>CASE( MOD( Snapshot_Created_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Filter: Name of Day</label>
    <type>Text</type>
</CustomField>