force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Field_Filter_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Filter_Week_Number__c</fullName>
    <formula>IF( 
  CEILING( ( Snapshot_Created_Date__c - DATE( YEAR( Snapshot_Created_Date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Snapshot_Created_Date__c - DATE( YEAR( Snapshot_Created_Date__c ), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Filter: Week Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>