force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Filter_Field_Year__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_Year__c</fullName>
    <formula>TEXT(YEAR(Snapshot_Created_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Field: Year</label>
    <type>Text</type>
</CustomField>