force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>90</length>
    <type>Text</type>
</CustomField>