force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Historical Data Opportunities</relationshipLabel>
    <relationshipName>Historical_Data_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>