force-app/main/default/objects/Historical_Data_Opportunity__c/fields/PMC_Global__c.field-meta.xml
<CustomField>
    <fullName>PMC_Global__c</fullName>
    <label>PMC - Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>