force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Snapshot_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Created_Date__c</fullName>
    <label>Snapshot Created Date</label>
    <type>Date</type>
</CustomField>