force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>90</length>
    <type>Text</type>
</CustomField>