force-app/main/default/objects/Historical_Data_Opportunity__c/fields/Weighted_amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_amount__c</fullName>
    <label>Weighted amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>