force-app/main/default/objects/Historical_Data_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Snapshot_Created_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>Stage__c</columns>
    <columns>Field_Filter_Day__c</columns>
    <columns>Field_Filter_Name_of_Day__c</columns>
    <columns>Filter_Field_Month__c</columns>
    <columns>Filter_Field_Year__c</columns>
    <columns>Account_Region_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>